# FOWT-Digital-Twin

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: hankel_dmd.yaml  mac_validation.yaml  missing_sensor_generalization.yaml  openfast_cases.yaml  probabilistic_modes.yaml  ssi_cov.yaml  virtual_sensing.yaml
data/sample/: sample_case_small.csv
docs/: code_inventory.md  data_description.md  methodology.md  openfast_pipeline.md  reproduction_guide.md
legacy/hankel_dmd_original/: Filter_Hankel_03.py  Lyapunov_Exponent_Estimation.py  MAC_Final.py  Missing_Sensor_Generalization_2 2.py  Noise_Floor_Analysis.py  OpenFast_Mode_Shapes.py  Probablistic_Mode_shape 2.py  SSICOV_2.py  SSI_COV_Stablizing.py  Virtual_sensing 2.py
legacy/openfast_original/: Data_ML.py  Data_for_DmD.py  Linearize_ParametricInputs.py  Modal_OutPut_Final_02.py  Sensor_Tower.py
notebooks/: 01_hankel_dmd_tutorial.ipynb
openfast/baseline/: README.md
openfast/templates/linear/: main.fst
scripts/analysis/: run_hankel_dmd.py  run_mac_validation.py  run_missing_sensor_generalization.py  run_probabilistic_modes.py  run_ssi_cov.py  run_ssi_stabilization.py  run_virtual_sensing.py
scripts/openfast/: export_dmd_csv.py  extract_linear_modes.py  generate_linear_cases.py  generate_nonlinear_cases.py
src/eftwin/: __init__.py  config.py  constants.py  data_io.py  hankel_dmd.py  modal_analysis.py  noise_lyapunov.py  openfast_pipeline.py  plotting.py  preprocessing.py  probabilistic_modes.py  ssi_cov.py  virtual_sensing.py
tests/: test_smoke.py
(+1 files in other folders)
